Launching screen setup complete

--- a/PiggyPatchwork/Base.lproj/LaunchScreen.storyboard
+++ b/PiggyPatchwork/Base.lproj/LaunchScreen.storyboard
@@ -15,13 +15,168 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_pig" translatesAutoresizingMaskIntoConstraints="NO" id="RHW-nh-P1z">
+                                <rect key="frame" x="32" y="596" width="350" height="350"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="RHW-nh-P1z" secondAttribute="height" id="MfK-Ej-tbG"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_p" translatesAutoresizingMaskIntoConstraints="NO" id="RPY-Xi-YST">
+                                <rect key="frame" x="87.5" y="200.5" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="RPY-Xi-YST" secondAttribute="height" id="RSQ-xe-NaU"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_i" translatesAutoresizingMaskIntoConstraints="NO" id="JYB-L0-Iry">
+                                <rect key="frame" x="157.5" y="200.5" width="30" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="JYB-L0-Iry" secondAttribute="height" multiplier="1:2" id="CCt-nW-0JM"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_g" translatesAutoresizingMaskIntoConstraints="NO" id="AhL-s3-CaY">
+                                <rect key="frame" x="197.5" y="215" width="36" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="AhL-s3-CaY" secondAttribute="height" multiplier="3:5" id="KVa-hh-kx4"/>
+                                </constraints>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oaV-Ms-xvo">
+                                <rect key="frame" x="0.0" y="260.5" width="414" height="136.5"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_g" translatesAutoresizingMaskIntoConstraints="NO" id="2dR-Wx-GjC">
+                                <rect key="frame" x="243.5" y="215" width="36" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="2dR-Wx-GjC" secondAttribute="height" multiplier="3:5" id="D2L-IS-1zS"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="E1W-SL-CPh">
+                                <rect key="frame" x="8" y="397" width="398" height="56"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_p copy" translatesAutoresizingMaskIntoConstraints="NO" id="x1u-Fm-Tbv">
+                                        <rect key="frame" x="0.0" y="0.0" width="56" height="56"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="x1u-Fm-Tbv" secondAttribute="height" id="Js6-2d-1ac"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_a" translatesAutoresizingMaskIntoConstraints="NO" id="MJk-j0-Vga">
+                                        <rect key="frame" x="60" y="20" width="36" height="36"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="MJk-j0-Vga" secondAttribute="height" multiplier="1:1" id="2Gf-oh-wyr"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_t" translatesAutoresizingMaskIntoConstraints="NO" id="7iI-CR-F4E">
+                                        <rect key="frame" x="99.5" y="4" width="26" height="52"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="7iI-CR-F4E" secondAttribute="height" multiplier="1:2" id="HZh-6M-VMc"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_c" translatesAutoresizingMaskIntoConstraints="NO" id="P6D-ZI-he0">
+                                        <rect key="frame" x="129.5" y="20" width="36" height="36"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="P6D-ZI-he0" secondAttribute="height" multiplier="1:1" id="mX3-Wx-m21"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_h" translatesAutoresizingMaskIntoConstraints="NO" id="Z1x-8G-598">
+                                        <rect key="frame" x="169" y="3" width="44.000000000000014" height="53"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="Z1x-8G-598" secondAttribute="height" multiplier="5:6" id="mrR-yB-XGp"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_w" translatesAutoresizingMaskIntoConstraints="NO" id="LhJ-34-nxU">
+                                        <rect key="frame" x="217" y="21.5" width="52" height="34.5"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="LhJ-34-nxU" secondAttribute="height" multiplier="3:2" id="a8S-Mt-oe0"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_o" translatesAutoresizingMaskIntoConstraints="NO" id="pB9-lg-7KN">
+                                        <rect key="frame" x="272.5" y="20" width="36" height="36"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="pB9-lg-7KN" secondAttribute="height" multiplier="1:1" id="Q4f-vI-jTV"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_r" translatesAutoresizingMaskIntoConstraints="NO" id="exm-8j-gwQ">
+                                        <rect key="frame" x="312.5" y="20" width="36" height="36"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="exm-8j-gwQ" secondAttribute="height" multiplier="1:1" id="n6q-bo-wNN"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_k" translatesAutoresizingMaskIntoConstraints="NO" id="ZMG-co-UOa">
+                                        <rect key="frame" x="352" y="1" width="46" height="55"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="ZMG-co-UOa" secondAttribute="height" multiplier="5:6" id="XPs-DM-aeM"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="LhJ-34-nxU" firstAttribute="width" secondItem="E1W-SL-CPh" secondAttribute="width" multiplier="52:398" id="2GC-70-3pn"/>
+                                    <constraint firstItem="Z1x-8G-598" firstAttribute="width" secondItem="E1W-SL-CPh" secondAttribute="width" multiplier="44:398" id="5B9-Qh-Ebf"/>
+                                    <constraint firstItem="x1u-Fm-Tbv" firstAttribute="width" secondItem="E1W-SL-CPh" secondAttribute="width" multiplier="56:398" id="IYj-oh-yRo"/>
+                                    <constraint firstItem="7iI-CR-F4E" firstAttribute="width" secondItem="E1W-SL-CPh" secondAttribute="width" multiplier="26:398" id="STL-nY-5Fu"/>
+                                    <constraint firstItem="ZMG-co-UOa" firstAttribute="width" secondItem="E1W-SL-CPh" secondAttribute="width" multiplier="46:398" id="U0a-zV-1gD"/>
+                                    <constraint firstItem="pB9-lg-7KN" firstAttribute="width" secondItem="E1W-SL-CPh" secondAttribute="width" multiplier="36:398" id="WIN-o8-XwE"/>
+                                    <constraint firstItem="P6D-ZI-he0" firstAttribute="width" secondItem="E1W-SL-CPh" secondAttribute="width" multiplier="36:398" id="XD0-5D-ovH"/>
+                                    <constraint firstItem="MJk-j0-Vga" firstAttribute="width" secondItem="E1W-SL-CPh" secondAttribute="width" multiplier="36:398" id="ftS-xo-aGi"/>
+                                    <constraint firstItem="exm-8j-gwQ" firstAttribute="width" secondItem="E1W-SL-CPh" secondAttribute="width" multiplier="36:398" id="xZL-fj-N8a"/>
+                                </constraints>
+                            </stackView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_y" translatesAutoresizingMaskIntoConstraints="NO" id="pSq-gs-LNA">
+                                <rect key="frame" x="289.5" y="221.5" width="38" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="pSq-gs-LNA" secondAttribute="height" multiplier="19:30" id="p6t-df-Hwd"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="2dR-Wx-GjC" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" multiplier="36:414" id="4ll-Z0-KuD"/>
+                            <constraint firstItem="RPY-Xi-YST" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" multiplier="60:414" id="4zf-cD-OdA"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="oaV-Ms-xvo" secondAttribute="trailing" id="5hC-aL-Qfv"/>
+                            <constraint firstItem="AhL-s3-CaY" firstAttribute="centerY" secondItem="RPY-Xi-YST" secondAttribute="bottom" multiplier="9.4:10" id="7xC-P8-lBl"/>
+                            <constraint firstItem="E1W-SL-CPh" firstAttribute="top" secondItem="oaV-Ms-xvo" secondAttribute="bottom" id="88M-Zf-nlS"/>
+                            <constraint firstItem="AhL-s3-CaY" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" multiplier="36:414" id="Avv-JS-PXb"/>
+                            <constraint firstItem="oaV-Ms-xvo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="BAQ-Rs-4MP"/>
+                            <constraint firstAttribute="bottom" secondItem="RHW-nh-P1z" secondAttribute="bottom" constant="-50" id="EXO-hM-gx0"/>
+                            <constraint firstItem="E1W-SL-CPh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="Fzq-Iv-rPE"/>
+                            <constraint firstItem="pSq-gs-LNA" firstAttribute="leading" secondItem="2dR-Wx-GjC" secondAttribute="trailing" constant="10" id="HwX-Bp-n9N"/>
+                            <constraint firstItem="RHW-nh-P1z" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" multiplier="350:414" id="ItT-h4-pfA"/>
+                            <constraint firstItem="oaV-Ms-xvo" firstAttribute="top" secondItem="RPY-Xi-YST" secondAttribute="bottom" id="Lhy-IK-bbh"/>
+                            <constraint firstItem="pSq-gs-LNA" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" multiplier="38:414" id="Og3-os-MdU"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="E1W-SL-CPh" secondAttribute="trailing" constant="8" id="PaM-xt-6cA"/>
+                            <constraint firstItem="2dR-Wx-GjC" firstAttribute="top" secondItem="AhL-s3-CaY" secondAttribute="top" id="PvS-QE-RuB"/>
+                            <constraint firstItem="JYB-L0-Iry" firstAttribute="leading" secondItem="RPY-Xi-YST" secondAttribute="trailing" constant="10" id="RR6-Lu-G58"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="centerY" secondItem="E1W-SL-CPh" secondAttribute="bottom" id="TAM-Ge-0OZ"/>
+                            <constraint firstItem="pSq-gs-LNA" firstAttribute="top" secondItem="2dR-Wx-GjC" secondAttribute="top" multiplier="10:9.7" id="ZOm-Hy-x6y"/>
+                            <constraint firstItem="2dR-Wx-GjC" firstAttribute="leading" secondItem="AhL-s3-CaY" secondAttribute="trailing" constant="10" id="aJy-eE-Elb"/>
+                            <constraint firstItem="JYB-L0-Iry" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" multiplier="30:414" id="bmp-4d-x5j"/>
+                            <constraint firstItem="AhL-s3-CaY" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" multiplier="10:9.6" id="cgi-zn-WfS"/>
+                            <constraint firstItem="RHW-nh-P1z" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="exa-3S-fVy"/>
+                            <constraint firstItem="JYB-L0-Iry" firstAttribute="bottom" secondItem="RPY-Xi-YST" secondAttribute="bottom" id="fWH-Vg-qfU"/>
+                            <constraint firstItem="oaV-Ms-xvo" firstAttribute="height" secondItem="6Tk-OE-BBY" secondAttribute="height" multiplier="1:6" id="oWt-CS-ZzW"/>
+                            <constraint firstItem="AhL-s3-CaY" firstAttribute="leading" secondItem="JYB-L0-Iry" secondAttribute="trailing" constant="10" id="rGH-sJ-wdy"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="piggy patchwork_a" width="42" height="43.5"/>
+        <image name="piggy patchwork_c" width="35" height="42.5"/>
+        <image name="piggy patchwork_g" width="36" height="62.5"/>
+        <image name="piggy patchwork_h" width="51.5" height="66"/>
+        <image name="piggy patchwork_i" width="30" height="64"/>
+        <image name="piggy patchwork_k" width="51.5" height="66"/>
+        <image name="piggy patchwork_o" width="41" height="43"/>
+        <image name="piggy patchwork_p" width="64" height="64"/>
+        <image name="piggy patchwork_p copy" width="63.5" height="66"/>
+        <image name="piggy patchwork_pig" width="288" height="317"/>
+        <image name="piggy patchwork_r" width="37.5" height="44.5"/>
+        <image name="piggy patchwork_t" width="30" height="64.5"/>
+        <image name="piggy patchwork_w" width="59" height="43"/>
+        <image name="piggy patchwork_y" width="42.5" height="62.5"/>
+    </resources>
 </document>
