--- a/PiggyPatchwork/Base.lproj/LaunchScreen.storyboard
+++ b/PiggyPatchwork/Base.lproj/LaunchScreen.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
@@ -23,29 +23,29 @@
                                 </constraints>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_p" translatesAutoresizingMaskIntoConstraints="NO" id="RPY-Xi-YST">
-                                <rect key="frame" x="87.5" y="200.5" width="60" height="60"/>
+                                <rect key="frame" x="87.666666666666671" y="200.66666666666666" width="60.000000000000014" height="59.999999999999972"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="RPY-Xi-YST" secondAttribute="height" id="RSQ-xe-NaU"/>
                                 </constraints>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_i" translatesAutoresizingMaskIntoConstraints="NO" id="JYB-L0-Iry">
-                                <rect key="frame" x="157.5" y="200.5" width="30" height="60"/>
+                                <rect key="frame" x="157.66666666666666" y="200.66666666666666" width="30" height="59.999999999999972"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="JYB-L0-Iry" secondAttribute="height" multiplier="1:2" id="CCt-nW-0JM"/>
                                 </constraints>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_g" translatesAutoresizingMaskIntoConstraints="NO" id="AhL-s3-CaY">
-                                <rect key="frame" x="197.5" y="215" width="36" height="60"/>
+                                <rect key="frame" x="197.66666666666666" y="215" width="36" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="AhL-s3-CaY" secondAttribute="height" multiplier="3:5" id="KVa-hh-kx4"/>
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oaV-Ms-xvo">
-                                <rect key="frame" x="0.0" y="260.5" width="414" height="136.5"/>
+                                <rect key="frame" x="0.0" y="260.66666666666669" width="414" height="136.33333333333331"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_g" translatesAutoresizingMaskIntoConstraints="NO" id="2dR-Wx-GjC">
-                                <rect key="frame" x="243.5" y="215" width="36" height="60"/>
+                                <rect key="frame" x="243.66666666666663" y="215" width="36" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="2dR-Wx-GjC" secondAttribute="height" multiplier="3:5" id="D2L-IS-1zS"/>
                                 </constraints>
@@ -53,56 +53,56 @@
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="E1W-SL-CPh">
                                 <rect key="frame" x="8" y="397" width="398" height="56"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_p copy" translatesAutoresizingMaskIntoConstraints="NO" id="x1u-Fm-Tbv">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_p" translatesAutoresizingMaskIntoConstraints="NO" id="x1u-Fm-Tbv">
                                         <rect key="frame" x="0.0" y="0.0" width="56" height="56"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="x1u-Fm-Tbv" secondAttribute="height" id="Js6-2d-1ac"/>
                                         </constraints>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_a" translatesAutoresizingMaskIntoConstraints="NO" id="MJk-j0-Vga">
-                                        <rect key="frame" x="60" y="20" width="36" height="36"/>
+                                        <rect key="frame" x="59.666666666666671" y="20" width="36" height="36"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="MJk-j0-Vga" secondAttribute="height" multiplier="1:1" id="2Gf-oh-wyr"/>
                                         </constraints>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_t" translatesAutoresizingMaskIntoConstraints="NO" id="7iI-CR-F4E">
-                                        <rect key="frame" x="99.5" y="4" width="26" height="52"/>
+                                        <rect key="frame" x="99.666666666666671" y="4" width="26" height="52"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="7iI-CR-F4E" secondAttribute="height" multiplier="1:2" id="HZh-6M-VMc"/>
                                         </constraints>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_c" translatesAutoresizingMaskIntoConstraints="NO" id="P6D-ZI-he0">
-                                        <rect key="frame" x="129.5" y="20" width="36" height="36"/>
+                                        <rect key="frame" x="129.33333333333334" y="20" width="36" height="36"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="P6D-ZI-he0" secondAttribute="height" multiplier="1:1" id="mX3-Wx-m21"/>
                                         </constraints>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_h" translatesAutoresizingMaskIntoConstraints="NO" id="Z1x-8G-598">
-                                        <rect key="frame" x="169" y="3" width="44.000000000000014" height="53"/>
+                                        <rect key="frame" x="169" y="3.3333333333333144" width="44" height="52.666666666666664"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="Z1x-8G-598" secondAttribute="height" multiplier="5:6" id="mrR-yB-XGp"/>
                                         </constraints>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_w" translatesAutoresizingMaskIntoConstraints="NO" id="LhJ-34-nxU">
-                                        <rect key="frame" x="217" y="21.5" width="52" height="34.5"/>
+                                        <rect key="frame" x="216.66666666666666" y="21.333333333333311" width="51.999999999999972" height="34.666666666666657"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="LhJ-34-nxU" secondAttribute="height" multiplier="3:2" id="a8S-Mt-oe0"/>
                                         </constraints>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_o" translatesAutoresizingMaskIntoConstraints="NO" id="pB9-lg-7KN">
-                                        <rect key="frame" x="272.5" y="20" width="36" height="36"/>
+                                        <rect key="frame" x="272.66666666666669" y="20" width="36" height="36"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="pB9-lg-7KN" secondAttribute="height" multiplier="1:1" id="Q4f-vI-jTV"/>
                                         </constraints>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_r" translatesAutoresizingMaskIntoConstraints="NO" id="exm-8j-gwQ">
-                                        <rect key="frame" x="312.5" y="20" width="36" height="36"/>
+                                        <rect key="frame" x="312.33333333333331" y="20" width="36" height="36"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="exm-8j-gwQ" secondAttribute="height" multiplier="1:1" id="n6q-bo-wNN"/>
                                         </constraints>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_k" translatesAutoresizingMaskIntoConstraints="NO" id="ZMG-co-UOa">
-                                        <rect key="frame" x="352" y="1" width="46" height="55"/>
+                                        <rect key="frame" x="352" y="0.66666666666668561" width="46" height="55.333333333333336"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="ZMG-co-UOa" secondAttribute="height" multiplier="5:6" id="XPs-DM-aeM"/>
                                         </constraints>
@@ -121,7 +121,7 @@
                                 </constraints>
                             </stackView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_y" translatesAutoresizingMaskIntoConstraints="NO" id="pSq-gs-LNA">
-                                <rect key="frame" x="289.5" y="221.5" width="38" height="60"/>
+                                <rect key="frame" x="289.66666666666669" y="221.66666666666666" width="38" height="59.999999999999972"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="pSq-gs-LNA" secondAttribute="height" multiplier="19:30" id="p6t-df-Hwd"/>
                                 </constraints>
@@ -164,19 +164,18 @@
         </scene>
     </scenes>
     <resources>
-        <image name="piggy patchwork_a" width="42" height="43.5"/>
-        <image name="piggy patchwork_c" width="35" height="42.5"/>
-        <image name="piggy patchwork_g" width="36" height="62.5"/>
-        <image name="piggy patchwork_h" width="51.5" height="66"/>
+        <image name="piggy patchwork_a" width="42" height="43.666667938232422"/>
+        <image name="piggy patchwork_c" width="35" height="42.666667938232422"/>
+        <image name="piggy patchwork_g" width="36" height="62.666667938232422"/>
+        <image name="piggy patchwork_h" width="51.666667938232422" height="66"/>
         <image name="piggy patchwork_i" width="30" height="64"/>
-        <image name="piggy patchwork_k" width="51.5" height="66"/>
+        <image name="piggy patchwork_k" width="51.666667938232422" height="66"/>
         <image name="piggy patchwork_o" width="41" height="43"/>
         <image name="piggy patchwork_p" width="64" height="64"/>
-        <image name="piggy patchwork_p copy" width="63.5" height="66"/>
         <image name="piggy patchwork_pig" width="288" height="317"/>
-        <image name="piggy patchwork_r" width="37.5" height="44.5"/>
-        <image name="piggy patchwork_t" width="30" height="64.5"/>
+        <image name="piggy patchwork_r" width="37.666667938232422" height="44.666667938232422"/>
+        <image name="piggy patchwork_t" width="30" height="64.666664123535156"/>
         <image name="piggy patchwork_w" width="59" height="43"/>
-        <image name="piggy patchwork_y" width="42.5" height="62.5"/>
+        <image name="piggy patchwork_y" width="42.666667938232422" height="62.666667938232422"/>
     </resources>
 </document>
