home page UI setup complete

--- a/PiggyPatchwork/Base.lproj/Collage.storyboard
+++ b/PiggyPatchwork/Base.lproj/Collage.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -172,7 +173,7 @@
                                         <rect key="frame" x="30" y="15" width="20" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="20" id="8pA-7y-Scg"/>
-                                            <constraint firstAttribute="height" constant="20" id="aPQ-1b-Fgv"/>
+                                            <constraint firstAttribute="width" secondItem="frw-va-Hvh" secondAttribute="height" multiplier="1:1" id="D4v-oK-QfV"/>
                                         </constraints>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ehO-aB-eB5">
@@ -227,7 +228,7 @@
                                         <rect key="frame" x="30" y="16" width="18" height="18"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="18" id="XSW-Rp-N0Y"/>
-                                            <constraint firstAttribute="height" constant="18" id="ugm-DV-2PP"/>
+                                            <constraint firstAttribute="width" secondItem="Hga-Ot-P3u" secondAttribute="height" multiplier="1:1" id="diP-vB-Jvm"/>
                                         </constraints>
                                     </imageView>
                                 </subviews>
@@ -282,7 +283,7 @@
                                         <rect key="frame" x="30" y="16" width="18" height="18"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="18" id="ZFm-Sb-nn9"/>
-                                            <constraint firstAttribute="height" constant="18" id="bvw-Qd-5ub"/>
+                                            <constraint firstAttribute="width" secondItem="Mhg-SE-WXd" secondAttribute="height" multiplier="1:1" id="nb8-Ik-ZaA"/>
                                         </constraints>
                                     </imageView>
                                 </subviews>
