--- a/PiggyPatchwork/PhotoMovie.storyboard
+++ b/PiggyPatchwork/PhotoMovie.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="O0o-0k-QGJ">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -184,7 +185,7 @@
                                                 <fragment content="儲存影片">
                                                     <attributes>
                                                         <color key="NSColor" red="0.52156862745098043" green="0.81176470588235294" blue="0.70588235294117641" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                        <font key="NSFont" size="15" name=".PingFangTC-Regular"/>
+                                                        <font key="NSFont" size="16" name="PingFangTC-Semibold"/>
                                                     </attributes>
                                                 </fragment>
                                             </attributedString>
@@ -222,7 +223,7 @@
                                                 <fragment content="分享至社群">
                                                     <attributes>
                                                         <color key="NSColor" red="0.52156862745098043" green="0.81176470588235294" blue="0.70588235294117641" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                        <font key="NSFont" size="15" name=".PingFangTC-Regular"/>
+                                                        <font key="NSFont" size="16" name="PingFangTC-Semibold"/>
                                                     </attributes>
                                                 </fragment>
                                             </attributedString>
