--- a/PiggyPatchwork/Base.lproj/LaunchScreen.storyboard
+++ b/PiggyPatchwork/Base.lproj/LaunchScreen.storyboard
@@ -23,86 +23,86 @@
                                 </constraints>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_p" translatesAutoresizingMaskIntoConstraints="NO" id="RPY-Xi-YST">
-                                <rect key="frame" x="87.666666666666671" y="200.66666666666666" width="60.000000000000014" height="59.999999999999972"/>
+                                <rect key="frame" x="87.666666666666671" y="203" width="60.000000000000014" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="RPY-Xi-YST" secondAttribute="height" id="RSQ-xe-NaU"/>
                                 </constraints>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_i" translatesAutoresizingMaskIntoConstraints="NO" id="JYB-L0-Iry">
-                                <rect key="frame" x="157.66666666666666" y="200.66666666666666" width="30" height="59.999999999999972"/>
+                                <rect key="frame" x="157.66666666666666" y="203" width="30" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="JYB-L0-Iry" secondAttribute="height" multiplier="1:2" id="CCt-nW-0JM"/>
                                 </constraints>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_g" translatesAutoresizingMaskIntoConstraints="NO" id="AhL-s3-CaY">
-                                <rect key="frame" x="197.66666666666666" y="215" width="36" height="60"/>
+                                <rect key="frame" x="197.66666666666666" y="217" width="36" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="AhL-s3-CaY" secondAttribute="height" multiplier="3:5" id="KVa-hh-kx4"/>
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oaV-Ms-xvo">
-                                <rect key="frame" x="0.0" y="260.66666666666669" width="414" height="136.33333333333331"/>
+                                <rect key="frame" x="0.0" y="263" width="414" height="136.33333333333337"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_g" translatesAutoresizingMaskIntoConstraints="NO" id="2dR-Wx-GjC">
-                                <rect key="frame" x="243.66666666666663" y="215" width="36" height="60"/>
+                                <rect key="frame" x="243.66666666666663" y="217" width="36" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="2dR-Wx-GjC" secondAttribute="height" multiplier="3:5" id="D2L-IS-1zS"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="E1W-SL-CPh">
-                                <rect key="frame" x="8" y="397" width="398" height="56"/>
+                                <rect key="frame" x="16" y="399.33333333333331" width="382" height="53.666666666666686"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_p" translatesAutoresizingMaskIntoConstraints="NO" id="x1u-Fm-Tbv">
-                                        <rect key="frame" x="0.0" y="0.0" width="56" height="56"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="53.666666666666664" height="53.666666666666664"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="x1u-Fm-Tbv" secondAttribute="height" id="Js6-2d-1ac"/>
                                         </constraints>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_a" translatesAutoresizingMaskIntoConstraints="NO" id="MJk-j0-Vga">
-                                        <rect key="frame" x="59.666666666666671" y="20" width="36" height="36"/>
+                                        <rect key="frame" x="57.333333333333329" y="18.999999999999996" width="34.666666666666671" height="34.666666666666657"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="MJk-j0-Vga" secondAttribute="height" multiplier="1:1" id="2Gf-oh-wyr"/>
                                         </constraints>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_t" translatesAutoresizingMaskIntoConstraints="NO" id="7iI-CR-F4E">
-                                        <rect key="frame" x="99.666666666666671" y="4" width="26" height="52"/>
+                                        <rect key="frame" x="95.666666666666671" y="3.6666666666666856" width="24.666666666666671" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="7iI-CR-F4E" secondAttribute="height" multiplier="1:2" id="HZh-6M-VMc"/>
                                         </constraints>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_c" translatesAutoresizingMaskIntoConstraints="NO" id="P6D-ZI-he0">
-                                        <rect key="frame" x="129.33333333333334" y="20" width="36" height="36"/>
+                                        <rect key="frame" x="124.00000000000001" y="18.999999999999996" width="34.666666666666671" height="34.666666666666657"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="P6D-ZI-he0" secondAttribute="height" multiplier="1:1" id="mX3-Wx-m21"/>
                                         </constraints>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_h" translatesAutoresizingMaskIntoConstraints="NO" id="Z1x-8G-598">
-                                        <rect key="frame" x="169" y="3.3333333333333144" width="44" height="52.666666666666664"/>
+                                        <rect key="frame" x="162.33333333333334" y="3" width="42" height="50.666666666666664"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="Z1x-8G-598" secondAttribute="height" multiplier="5:6" id="mrR-yB-XGp"/>
                                         </constraints>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_w" translatesAutoresizingMaskIntoConstraints="NO" id="LhJ-34-nxU">
-                                        <rect key="frame" x="216.66666666666666" y="21.333333333333311" width="51.999999999999972" height="34.666666666666657"/>
+                                        <rect key="frame" x="208" y="20.333333333333375" width="50" height="33.333333333333343"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="LhJ-34-nxU" secondAttribute="height" multiplier="3:2" id="a8S-Mt-oe0"/>
                                         </constraints>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_o" translatesAutoresizingMaskIntoConstraints="NO" id="pB9-lg-7KN">
-                                        <rect key="frame" x="272.66666666666669" y="20" width="36" height="36"/>
+                                        <rect key="frame" x="261.66666666666669" y="18.999999999999996" width="34.333333333333314" height="34.666666666666657"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="pB9-lg-7KN" secondAttribute="height" multiplier="1:1" id="Q4f-vI-jTV"/>
                                         </constraints>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_r" translatesAutoresizingMaskIntoConstraints="NO" id="exm-8j-gwQ">
-                                        <rect key="frame" x="312.33333333333331" y="20" width="36" height="36"/>
+                                        <rect key="frame" x="299.66666666666669" y="18.999999999999996" width="34.666666666666686" height="34.666666666666657"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="exm-8j-gwQ" secondAttribute="height" multiplier="1:1" id="n6q-bo-wNN"/>
                                         </constraints>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_k" translatesAutoresizingMaskIntoConstraints="NO" id="ZMG-co-UOa">
-                                        <rect key="frame" x="352" y="0.66666666666668561" width="46" height="55.333333333333336"/>
+                                        <rect key="frame" x="338" y="0.66666666666668561" width="44" height="53"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="ZMG-co-UOa" secondAttribute="height" multiplier="5:6" id="XPs-DM-aeM"/>
                                         </constraints>
@@ -121,7 +121,7 @@
                                 </constraints>
                             </stackView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy patchwork_y" translatesAutoresizingMaskIntoConstraints="NO" id="pSq-gs-LNA">
-                                <rect key="frame" x="289.66666666666669" y="221.66666666666666" width="38" height="59.999999999999972"/>
+                                <rect key="frame" x="289.66666666666669" y="224" width="38" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="pSq-gs-LNA" secondAttribute="height" multiplier="19:30" id="p6t-df-Hwd"/>
                                 </constraints>
@@ -137,12 +137,12 @@
                             <constraint firstItem="AhL-s3-CaY" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" multiplier="36:414" id="Avv-JS-PXb"/>
                             <constraint firstItem="oaV-Ms-xvo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="BAQ-Rs-4MP"/>
                             <constraint firstAttribute="bottom" secondItem="RHW-nh-P1z" secondAttribute="bottom" constant="-50" id="EXO-hM-gx0"/>
-                            <constraint firstItem="E1W-SL-CPh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="Fzq-Iv-rPE"/>
+                            <constraint firstItem="E1W-SL-CPh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="Fzq-Iv-rPE"/>
                             <constraint firstItem="pSq-gs-LNA" firstAttribute="leading" secondItem="2dR-Wx-GjC" secondAttribute="trailing" constant="10" id="HwX-Bp-n9N"/>
                             <constraint firstItem="RHW-nh-P1z" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" multiplier="350:414" id="ItT-h4-pfA"/>
                             <constraint firstItem="oaV-Ms-xvo" firstAttribute="top" secondItem="RPY-Xi-YST" secondAttribute="bottom" id="Lhy-IK-bbh"/>
                             <constraint firstItem="pSq-gs-LNA" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" multiplier="38:414" id="Og3-os-MdU"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="E1W-SL-CPh" secondAttribute="trailing" constant="8" id="PaM-xt-6cA"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="E1W-SL-CPh" secondAttribute="trailing" constant="16" id="PaM-xt-6cA"/>
                             <constraint firstItem="2dR-Wx-GjC" firstAttribute="top" secondItem="AhL-s3-CaY" secondAttribute="top" id="PvS-QE-RuB"/>
                             <constraint firstItem="JYB-L0-Iry" firstAttribute="leading" secondItem="RPY-Xi-YST" secondAttribute="trailing" constant="10" id="RR6-Lu-G58"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="centerY" secondItem="E1W-SL-CPh" secondAttribute="bottom" id="TAM-Ge-0OZ"/>
